--- a/index.html
+++ b/index.html
@@ -121,35 +121,39 @@
         </div>
     </div>
 
-    <footer>Feito pela Thay com amor ✨❤</footer>
+    <footer>Feito pela Thay com amor ❤</footer>
 
     <script>
         const questions = [
-            {
-                question: "Quem é o melhor amigo do Naruto?",
-                options: ["Sasuke", "Shikamaru", "Kiba", "Gaara", "Neji"],
-                answer: 1
-            },
-            {
-                question: "Quem é o sensei do Time 7?",
-                options: ["Iruka", "Asuma", "Kakashi", "Gai", "Jiraiya"],
-                answer: 2
-            },
-            {
-                question: "Quem tem o Sharingan?",
-                options: ["Naruto", "Kiba", "Sasuke", "Sakura", "Shino"],
-                answer: 2
-            },
-            {
-                question: "Qual é o nome da raposa de 9 caudas?",
-                options: ["Kurama", "Matatabi", "Shukaku", "Gyuki", "Son Goku"],
-                answer: 0
-            },
-            {
-                question: "Quem é o Hokage no final de Naruto Shippuden?",
-                options: ["Tsunade", "Kakashi", "Naruto", "Sasuke", "Jiraiya"],
-                answer: 1
-            }
+            { question: "Quem é o melhor amigo do Naruto?", options: ["Sasuke", "Shikamaru", "Kiba", "Gaara", "Neji"], answer: 1 },
+            { question: "Quem é o sensei do Time 7?", options: ["Iruka", "Asuma", "Kakashi", "Gai", "Jiraiya"], answer: 2 },
+            { question: "Quem tem o Sharingan?", options: ["Naruto", "Kiba", "Sasuke", "Sakura", "Shino"], answer: 2 },
+            { question: "Qual é o nome da raposa de 9 caudas?", options: ["Kurama", "Matatabi", "Shukaku", "Gyuki", "Son Goku"], answer: 0 },
+            { question: "Quem é o Hokage no final de Naruto Shippuden?", options: ["Tsunade", "Kakashi", "Naruto", "Sasuke", "Jiraiya"], answer: 1 },
+            { question: "Quem é conhecido como 'Deus Shinobi'?", options: ["Naruto", "Hashirama", "Madara", "Tobirama", "Kakashi"], answer: 1 },
+            { question: "Quem matou o Itachi?", options: ["Naruto", "Sasuke", "Kakashi", "Madara", "Obito"], answer: 1 },
+            { question: "Quem treinou o Naruto no Monte Myoboku?", options: ["Kakashi", "Jiraiya", "Minato", "Iruka", "Tsunade"], answer: 1 },
+            { question: "Qual jutsu Naruto mais usa?", options: ["Chidori", "Amaterasu", "Rasengan", "Susanoo", "Byakugan"], answer: 2 },
+            { question: "Quem é o irmão do Sasuke?", options: ["Itachi", "Obito", "Madara", "Shisui", "Gaara"], answer: 0 },
+            { question: "Quem é o jinchuuriki do Shukaku?", options: ["Naruto", "Killer Bee", "Gaara", "Yugito", "Fuu"], answer: 2 },
+            { question: "Quem foi o Quarto Hokage?", options: ["Kakashi", "Jiraiya", "Hiruzen", "Minato", "Hashirama"], answer: 3 },
+            { question: "Qual é o clã do Neji?", options: ["Uchiha", "Hyuga", "Nara", "Akimichi", "Yamanaka"], answer: 1 },
+            { question: "Quem é a mãe do Naruto?", options: ["Tsunade", "Kushina", "Sakura", "Hinata", "Konan"], answer: 1 },
+            { question: "Qual é o sobrenome do Sasuke?", options: ["Uzumaki", "Hyuga", "Nara", "Uchiha", "Akimichi"], answer: 3 },
+            { question: "Quem é o pai do Naruto?", options: ["Kakashi", "Iruka", "Minato", "Jiraiya", "Sasuke"], answer: 2 },
+            { question: "Quem criou o Rasengan?", options: ["Kakashi", "Jiraiya", "Minato", "Naruto", "Tobirama"], answer: 2 },
+            { question: "Quem é o marido da Hinata?", options: ["Neji", "Sasuke", "Shikamaru", "Naruto", "Kiba"], answer: 3 },
+            { question: "Quem derrotou Kaguya?", options: ["Naruto e Sasuke", "Kakashi", "Sakura", "Obito", "Madara"], answer: 0 },
+            { question: "O que o Naruto sempre fala?", options: ["Dattebayo!", "Believe it!", "Sayonara!", "Nandayo!", "Itadakimasu!"], answer: 0 },
+            { question: "Quem é o Kazekage da Vila da Areia?", options: ["Naruto", "Gaara", "Kankuro", "Temari", "Sasori"], answer: 1 },
+            { question: "Quem era o líder da Akatsuki?", options: ["Itachi", "Pain", "Kisame", "Zetsu", "Konan"], answer: 1 },
+            { question: "Qual é o poder ocular do Kakashi?", options: ["Byakugan", "Sharingan", "Rinnegan", "Mangekyou", "Nenhum"], answer: 1 },
+            { question: "Quem é o parceiro do Kisame?", options: ["Itachi", "Pain", "Deidara", "Sasori", "Hidan"], answer: 0 },
+            { question: "Quem é a princesa Hyuga?", options: ["Tenten", "Sakura", "Hinata", "Ino", "Kushina"], answer: 2 },
+            { question: "Quem é o mestre do Shikamaru?", options: ["Asuma", "Kurenai", "Kakashi", "Gai", "Tsunade"], answer: 0 },
+            { question: "Qual é o nome do sapo mestre do Naruto?", options: ["Gamakichi", "Gamatatsu", "Fukasaku", "Gamabunta", "Jiraiya"], answer: 3 },
+            { question: "Quem é o criador do Edo Tensei?", options: ["Orochimaru", "Kabuto", "Tobirama", "Madara", "Sasuke"], answer: 2 },
+            { question: "Quem controla as marionetes?", options: ["Sasori", "Deidara", "Kankuro", "Gaara", "Tenten"], answer: 0 }
         ];
 
         let currentQuestion = 0;
@@ -183,8 +187,9 @@
         function showResult() {
             document.getElementById('question').style.display = 'none';
             document.getElementById('options').style.display = 'none';
-            document.getElementById('result').textContent =
-                Você acertou ${score} de ${questions.length} perguntas!;
+            document.getElementById('result').innerHTML = 
+                `Você acertou ${score} de ${questions.length} perguntas! <br><br>
+                <strong>vc sempre vai ser meu jogador de roblox favorito datebayo❤❤❤❤❤</strong>`;
         }
 
         showQuestion();
